--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: "CV"
-    url: /cv/
-
   - title: "Research"
     url: /research/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Code"
-    url: /code/
-        
-  - title: "Miscellaneous"
-    url: /miscellaneous/
+#   - title: "Code"
+#     url: /code/
+
+  - title: "CV"
+    url: /cv/
+
+#   - title: "Miscellaneous"
+#     url: /miscellaneous/
     
-  - title: "Blog Posts"
-    url: /blog-posts/
+#   - title: "Blog Posts"
+#     url: /blog-posts/
